Test/typing/should_fail/abstract_method_normal_class.java
package tutu.titi.toto;

class A {

    abstract void method1();

}
